# adersim-dem-hse

./: .gitignore  README.md  deployments.yaml  docker-compose.yaml  host-pv.yaml  host-pvc.yaml  services.yaml
analyse/: main.ipynb  pyproject.toml
analyse/lib/: classify.py  constants.py  createdb.py  train.py  utils.py  youtube.py
backend/: .dockerignore  Dockerfile  app.py  cache.json  docker-compose.yaml  pyproject.toml  requirements.txt
backend/lib/: generate.py
backend/src/: cache.json  cache.py  generate.py  utils.py
backend/tests/: test_cache.py  test_cache_old.py
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Background.tsx  Chat.tsx  Footer.tsx  Hero.tsx  Navigationbar.tsx  ThemeSwitcher.tsx  Videos.tsx
frontend/src/components/ui/: aurora-background.tsx  text-generation.tsx
frontend/src/lib/: hooks.ts  sample_questions.json  typings.d.ts  utils.ts
